fixed visual bug on mobile 2nd try, not caused by the button

--- a/client/src/components/StartPage/lessonstyle.css
+++ b/client/src/components/StartPage/lessonstyle.css
@@ -262,6 +262,7 @@
     -moz-box-shadow: 0 0 0 0 #000;
     box-shadow: 0 0 0 0 #000;
     transition: 0;
+    padding: 12px 0;
   }
 
   .lessonCard:hover {
